# YAIFS

./: .gitignore  AUTHORS.txt  README.md  metrics.md  pyproject.toml
docs/: conf.py  contents.rst  index.rst
docs/_templates/: layout.html
docs/about/: index.rst
docs/api_reference/: index.rst  yafs.distribution.rst  yafs.services.rst
docs/architecture/: architecture.rst
docs/introduction/: index.rst  installation.rst  metrics.rst  simulation_service.rst
lab_scenarios/case_three_cluster/: main.py  test_simulation.py
mcp-client/: README.md  cli.py  env_copy  tool_calls.jsonl
mcp-server/: README.md  server.py
src/: __init__.py
src/yafs/: __init__.py  action.py  api.py  application.py  core.py  distribution.py  metrics.py  path_routing.py  placement.py  population.py  selection.py  stats.py  topology.py
tutorial_scenarios/04_userMovement/: main.py
tutorial_scenarios/multi_agent_scenario/: README.md  SCENARIO_OVERVIEW.md  analyze_mec_failure_impact.py  analyze_random_nominal_latency.py  empty_placements.json  main_greedy.py  main_multi_agent.py  main_random.py  plot_multi_agent_timeline.py  plot_response_breakdown.py  plot_topology.py  report_deployment_costs.py  report_mec_failure_impact.py  services.json  topology.json
tutorial_scenarios/using_API_layer/: README.md  logging.ini  main.py  placements.json  services.json  users.json
tutorial_scenarios/using_core_layer/: README.md  logging.ini  main.py
tutorial_scenarios/using_service_layer/: README.md  main.py  topology.json  users.json
tutorial_scenarios/using_service_layer_01/: README.md  (+3 more)
(+121 files in other folders)
