[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yafs"
version = "3.1.0"
description = "YAIFS (Yet Another Intelligent Fog System), evolved from YAFS. The public branding is YAIFS while the Python package remains yafs for compatibility."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Isaac Lera", email = "isaac.lera@uib.es" },
    { name = "Carlos Guerrero", email = "carlos.guerrero@ouib.es" }
]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
urls = { Homepage = "https://yafs.readthedocs.io", Source = "https://github.com/acsicuib/YAIFS" }
dependencies = [
    "simpy>=4.0.1",
    "pandas>=1.4.3",
    "networkx>=2.8.4",
    "numpy>=1.23.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
